name:                  currymud
version:               0.1.0.0
synopsis:              A Multi-User Dungeon server.
description:           A text-based multiplayer real-time virtual world implemented over the Telnet protocol.
license:               BSD3
license-file:          LICENSE
author:                Jason Stolaruk
maintainer:            jasonstolaruk@gmail.com
copyright:             Copyright (c) 2013-2016, Jason Stolaruk and Detroit Labs LLC
category:              Game
stability:             alpha
homepage:              https://github.com/jasonstolaruk/CurryMUD
bug-reports:           https://github.com/jasonstolaruk/CurryMUD/issues
build-type:            Simple
cabal-version:         >=1.10

executable             curry
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2 -funfolding-use-threshold=16 -optc-O3
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:         base >=4.8 && <5.0
                       , currymud
                       , directory
                       -- , ekg
                       , mtl
                       , network
                       , text
  hs-source-dirs:      src

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  -- ghc-options:         -Wall -Werror -O2 -funfolding-use-threshold=16 -optc-O3
  exposed-modules:     Mud.Cmds.Admin
                       Mud.Cmds.Debug
                       Mud.Cmds.ExpCmds
                       Mud.Cmds.Msgs.Advice
                       Mud.Cmds.Msgs.CmdDesc
                       Mud.Cmds.Msgs.Dude
                       Mud.Cmds.Msgs.Hint
                       Mud.Cmds.Msgs.Misc
                       Mud.Cmds.Msgs.Sorry
                       Mud.Cmds.Pla
                       Mud.Cmds.Util.Abbrev
                       Mud.Cmds.Util.CmdPrefixes
                       Mud.Cmds.Util.EmoteExp.EmoteExp
                       Mud.Cmds.Util.EmoteExp.TwoWayEmoteExp
                       Mud.Cmds.Util.Misc
                       Mud.Cmds.Util.Pla
                       Mud.Data.Misc
                       Mud.Data.State.ActionParams.ActionParams
                       Mud.Data.State.ActionParams.Misc
                       Mud.Data.State.MsgQueue
                       Mud.Data.State.MudData
                       Mud.Data.State.Util.Calc
                       Mud.Data.State.Util.Coins
                       Mud.Data.State.Util.Destroy
                       Mud.Data.State.Util.Effect
                       Mud.Data.State.Util.Get
                       Mud.Data.State.Util.Misc
                       Mud.Data.State.Util.New
                       Mud.Data.State.Util.Output
                       Mud.Data.State.Util.Put
                       Mud.Data.State.Util.Random
                       Mud.Interp.CentralDispatch
                       Mud.Interp.Dispatch
                       Mud.Interp.Login
                       Mud.Interp.Misc
                       Mud.Interp.Npc
                       Mud.Interp.Pager
                       Mud.Misc.ANSI
                       Mud.Misc.Database
                       Mud.Misc.EffectFuns
                       Mud.Misc.LocPref
                       Mud.Misc.Logging
                       Mud.Misc.NameResolution
                       Mud.Misc.Persist
                       Mud.TheWorld.FoodIds
                       Mud.TheWorld.Foods
                       Mud.TheWorld.LiqIds
                       Mud.TheWorld.Liqs
                       Mud.TheWorld.Misc
                       Mud.TheWorld.TheWorld
                       Mud.TheWorld.Zones.AdminZone
                       Mud.TheWorld.Zones.AdminZoneIds
                       Mud.TheWorld.Zones.Tutorial
                       Mud.TheWorld.Zones.TutorialIds
                       Mud.Threads.Act
                       Mud.Threads.Biodegrader
                       Mud.Threads.DbTblPurger
                       Mud.Threads.Digester
                       Mud.Threads.Effect
                       Mud.Threads.InacTimer
                       Mud.Threads.Listen
                       Mud.Threads.Misc
                       Mud.Threads.NpcServer
                       Mud.Threads.Receive
                       Mud.Threads.Regen
                       Mud.Threads.RmFuns
                       Mud.Threads.Server
                       Mud.Threads.Talk
                       Mud.Threads.ThreadTblPurger
                       Mud.Threads.TrashDumpPurger
                       Mud.Threads.WorldPersister
                       Mud.TopLvlDefs.Chars
                       Mud.TopLvlDefs.FilePaths
                       Mud.TopLvlDefs.Misc
                       Mud.TopLvlDefs.Padding
                       Mud.TopLvlDefs.Telnet
                       Mud.TopLvlDefs.Vols
                       Mud.TopLvlDefs.Weights
                       Mud.Util.Lang
                       Mud.Util.List
                       Mud.Util.Misc
                       Mud.Util.Operators
                       Mud.Util.Padding
                       Mud.Util.Quoting
                       Mud.Util.Text
                       Mud.Util.Token
                       Mud.Util.Wrapping
  other-modules:       Paths_currymud
  other-extensions:    DeriveDataTypeable
                       DeriveGeneric
                       DuplicateRecordFields
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MonadComprehensions
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       ParallelListComp
                       PatternSynonyms
                       QuasiQuotes
                       RankNTypes
                       RebindableSyntax
                       RecordWildCards
                       ScopedTypeVariables
                       TemplateHaskell
                       TransformListComp
                       TupleSections
                       TypeFamilies
                       UndecidableInstances
                       ViewPatterns
  build-depends:         base >=4.8 && <5.0
                       , aeson
                       , ansi-terminal
                       , async
                       , bcrypt
                       , bytestring
                       , clock
                       , conduit
                       , conduit-extra
                       , containers
                       , directory
                       , filepath
                       , formatting
                       , hslogger
                       , lens
                       , lifted-base
                       , MissingH
                       , monad-control
                       , monad-loops
                       , mtl
                       , mwc-random
                       , network
                       , network-info
                       , process
                       , random
                       , regex-posix
                       , resourcet
                       , split
                       , sqlite-simple
                       , stm
                       , stm-chans
                       , text
                       , time
                       , transformers
                       , transformers-base
                       , unix
                       , vector
  hs-source-dirs:      lib

test-suite             test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  other-modules:       MudTests.Data.Misc
                       MudTests.Data.State.Util.Misc
                       MudTests.Data.State.Util.Random
                       MudTests.TestUtil
                       MudTests.TheWorld.TheWorld
                       MudTests.Util.List
                       MudTests.Util.Misc
                       MudTests.Util.Padding
                       MudTests.Util.Text
                       MudTests.Util.Wrapping
  other-extensions:    OverloadedStrings
                       TupleSections
                       ViewPatterns
  build-depends:         base >=4.8 && <5.0
                       , containers
                       , currymud
                       , lens
                       , mtl
                       , QuickCheck
                       , quickcheck-instances
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , text
                       , transformers
                       , vector
